--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <header>
     <h1>1Q Sticky Notes (Shared)</h1>
     <div id="userArea"></div>
+    <button id="toggleHistoryBtn" class="btn" style="margin-left:10px;">Hide History</button>
 </header>
 
 <div id="main" class="main">
