--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/client.js"></script>
+        <script type="module" src="/js/client.js"></script>
     </body>
 </html>
 
