feat: add auth and remote browser button

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <title>1Q Sticky Notes Shared</title>
         <link rel="stylesheet" href="/style.css">
     </head>
-    <body>
+    <body id="app" style="display:none;">
         <header>
             <h1>1Q Sticky Notes (Shared)</h1>
             <div id="userArea"></div>
@@ -20,6 +20,7 @@
             <div class="left-panel">
                 <div class="controls">
                     <button id="newNoteBtn">➕ New Note</button>
+                    <button id="openRemoteBtn">🌐 Open Remote Browser</button>
                 </div>
                 <div id="board" class="board"></div>
             </div>
