--- a/public/sticky-notes/index.html
+++ b/public/sticky-notes/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>1Q Sticky Notes Shared</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body id="app" style="display:none;">
         <header>
@@ -32,7 +32,7 @@
         </div>
 
         <script src="/socket.io/socket.io.js"></script>
-        <script type="module" src="/js/client.js"></script>
+        <script type="module" src="./js/client.js"></script>
     </body>
 </html>
 
